# test-infra

./: .codespellrc  .gitignore  Makefile  OWNERS_ALIASES  Pipfile  README.md  build_config.yaml  go.mod  go.sum  jobs.yaml  requirements.txt  setup.cfg  setup.py  test_config.example.yaml  test_config.yaml
argo/: README.md  prow-config.yaml  prow-data-plane.yaml  prow-jobs.yaml
bootstrap/: .gitignore  README.md  ack.tf  backend.tf  capability.tf  cleanup.tf  cluster.tf  flux.tf  gen-env  images.tf  main.tf  outputs.tf  variables.tf  versions.tf
charts/: README.md
docs/: iam-structure.md  infrastructure.md  onboarding.md  prow-image-cache-plan.md  prow-jobs.md  prow-migration-plan.md  prow-upgrade-plan.md  setup.md
flux/: README.md  ack.yaml  flux-self.yaml  flux.yaml  karpenter.yaml  kustomization.yaml  prometheus-dashboards.yaml  prometheus.yaml  prow-config.yaml  prow-data-plane.yaml  prow-jobs.yaml  prow-secrets.yaml  prow.yaml  secrets.yaml  self-managed-capability.yaml  self-managed-pod-identities.yaml  self-managed-prereqs.yaml  self-managed.yaml  ssm-agent.yaml
framework/: resources.py
infra/: .gitignore  README.md  cdk.json  package-lock.json  package.json
prow/: Dockerfile  README.md
prow/agent-workflows/agents/: README.md  prow-job.sh  pyproject.toml
prow/agent-workflows/agents/ack_builder_agent/: __main__.py  tools.py
prow/agent-workflows/agents/ack_generator_agent/: prompts.py  tools.py
prow/agent-workflows/agents/ack_model_agent/: __init__.py  __main__.py  prompt.py  tools.py
prow/agent-workflows/agents/ack_tag_agent/: __init__.py  __main__.py
prow/agent-workflows/agents/config/: __init__.py  defaults.py
prow/agent-workflows/agents/utils/: bedrock.py  settings.py  validation.py
prow/agent-workflows/agents/workflows/: __main__.py  ack_resource_workflow.py
scripts/: Dockerfile  Dockerfile.pytest-image  build-run-test-dockerfile.sh  controller-setup.sh  create-dev-cluster.sh  example-config.yaml  find-images.sh  helm-test-runner.sh  helm.sh  iam-policy-test-runner.sh  install-kind.sh  kind-build-test.sh  kind-setup.sh  kind.sh  run-dev.sh  (+20 more)
scripts-old/: provision-kind-cluster.sh  rotate-aws-creds-in-kind.sh  run-tests.sh  test-aws-creds.md  test-helm.sh
(+559 files in other folders)
