[metadata]
name = test-infra-aws-controllers-k8s
version = 0.0.1
author = AWS Controllers for Kubernetes (ACK) Contributors
description = Test framework for functional integration and soak testing for ACK service controllers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aws-controllers-k8s/test-infra
project_urls =
    Bug Tracker = https://github.com/aws-controllers-k8s/community/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[tool:pytest]
testpaths=test/
